--- a/python/rag.ipynb
+++ b/python/rag.ipynb
@@ -233,7 +233,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.2"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
